--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
   	<div class="jumbotron">
   		<div class="row">
-  			<div class="col-xs-12">
+  			<div class="col-xs-12 text-justify">
 				<h1 class="text-center">Steve Jobs</h1>
 				<h2 class="text-center"><em>American entrepreneur, business magnate, inventor, and industrial designer.</em></h2>
 				<div class="thumbnail"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Steve_Jobs_Headshot_2010-CROP.jpg" alt="Steve Jobs showing iPhone 4">
