--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
   	<div class="jumbotron">
   		<div class="row">
-  			<div class="col-xs-12">
+  			<div class="col-xs-12 text-justify">
 				<h1 class="text-center">Steve Jobs</h1>
 				<h2 class="text-center"><em>American entrepreneur, business magnate, inventor, and industrial designer.</em></h2>
 				<div class="thumbnail"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Steve_Jobs_Headshot_2010-CROP.jpg" alt="Steve Jobs showing iPhone 4">
@@ -65,7 +65,7 @@
 						<li><strong>24 Aug 2011</strong> - Steve Jobs resigns as CEO of Apple, with the words 'I have always said if there ever came a day when I could no longer meet my duties and expectations as Apple's CEO, I would be the first to let you know. Unfortunately, that day has come.' Tim Cook becomes Apple CEO</li>
 						<li><strong>5 Oct 2011</strong> - Steve Jobs dies at home, surrounded by his family</li>
 					</ul>
-					<blockquote>
+					<blockquote class="blockquote">
 			            <p>"Your time is limited, so don't waste it living someone else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of others' opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition."</p>
 			            <footer>
 			            	<cite>Steve Jobs’ 2005 Stanford Commencement</cite>
