--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					</ul>
 					<blockquote class="blockquote">
 			            <p>"Your time is limited, so don't waste it living someone else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of others' opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition."</p>
-			            <footer>
+			            <footer class="blockquote-footer text-right">
 			            	<cite>Steve Jobs’ 2005 Stanford Commencement</cite>
 			            </footer>
 		            </blockquote>
@@ -76,6 +76,10 @@
 			</div>
 		</div>
 	</div>
+	   	<footer class="text-center">
+      	<hr>
+        	<p>Written and coded by <a href="https://www.freecodecamp.org/kasyanovamg" target="_blank">Mariia Kasianova</a>.</p>
+  		</footer> 
 </div>
 </body>
 </html>
